# atcoder-log

./: .envrc  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  add-lockfile.patch  atcoder-rust.code-workspace  build.zig  build.zig.zon  cargo-compete.nix  cargo-snippet.nix  compete.toml  compose.yaml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml  tasks.nix  typos.toml
.devcontainer/: devcontainer.json
.zed/: settings.json
cargo-bin/: .crates.toml  .crates2.json
containers/ocaml/: .merlin  flake.nix  tasks.nix
containers/rust/: Dockerfile  flake.nix  tasks.nix
contests/1.42.0/: compete.toml  rust-toolchain.toml
contests/1.70.0/: Cargo.toml  compete.toml  rust-toolchain.toml
contests/abc212/: abc212_b.rs  abc212_c.rs
contests/abc214/: abc214_a.rs
contests/abc215/: abc215_b.rs
contests/abc216/: abc216_c.rs
crates/aclog/: .envrc  Cargo.toml  default.nix  justfile  shell.nix
crates/aclog/src/: cmds.rs  langs.rs  lib.rs  main.rs  workspace_info.rs
crates/aclog/src/cmds/: close.rs  list.rs  open.rs
languages/: Dockerfile
runtimes/: overlay.nix
scripts/: migrate-directory-structure.ts
snippets/: Cargo.toml  rust.code-snippets  rust.json  rustfmt.toml  shell.nix
snippets/cargo-snippet/: default.nix
snippets/rust/: .envrc  default.nix  shell.nix
snippets/rust/cargo-snippet/: default.nix
snippets/rust/src/: coord.rs  iter.rs  matrix.rs  search.rs
snippets/src/: coord.rs  iter.rs  lib.rs  math.rs  matrix.rs  search.rs  slice.rs  string.rs  time.rs
snippets/zig/: root.zig  slice.zig  tensor.zig  tokens.zig
(+512 files in other folders)
