[package]
name = "aclog"
version.workspace = true
edition.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[dependencies]
anyhow = "1.0.98"
bpaf = { version = "0.9.19", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10.1"
url = "2.5.4"
